# pico-autobixler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
PWM-Servo/basic_sweep/: basic_sweep.c
UART-CRSF/: CMakeLists.txt
UART-CRSF/crsf/: crsf.c
UART-CRSF/crsf_hello/: CMakeLists.txt  crsf_hello.c
UART-SBUS/SBUS-Hello/: CMakeLists.txt  sbus_hello.c
lib/: CMakeLists.txt
lib/crsf/: CMakeLists.txt  crsf.h  crsf_protocol.h
lib/mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h  mpu6050_defs.h
lib/pwm/: CMakeLists.txt  pwm.c  pwm.h
lib/sbus/: CMakeLists.txt  sbus.c  sbus.h
lib/system/: CMakeLists.txt  system.h
src/: CMakeLists.txt
src/I2C-MPU6050/: CMakeLists.txt
src/I2C-MPU6050/mpu6050_hello/: CMakeLists.txt  mpu6050_hello.c
src/PWM-Servo/: CMakeLists.txt
src/PWM-Servo/basic_sweep/: CMakeLists.txt  basic_sweep.c
src/SPI-BMP388/: CMakeLists.txt
src/SPI-BMP388/BMP388_hello/: BMP388_hello.c  CMakeLists.txt
src/UART-CRSF/: CMakeLists.txt
src/UART-CRSF/crsf_hello/: crsf_hello.c
src/UART-SBUS/: CMakeLists.txt
src/UART-SBUS/SBUS-Hello/: CMakeLists.txt  sbus_hello.c
src/main/: CMakeLists.txt
src/main/passthrough/: CMakeLists.txt  flight_rx_passthrough.c
